crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__golden_parallel_quorum_reached.snap
---
source: crates/nerve-workstation/src/flow/tests.rs
expression: render_outcome(&outcome)
---
ok=true
summary=join=quorum(n=2): 2 ok, reached
results:
  [0] ok=true text="answer A"
  [1] ok=true text="answer B"
