crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__golden_parallel_quorum_short.snap
---
source: crates/nerve-workstation/src/flow/tests.rs
expression: render_outcome(&outcome)
---
ok=false
summary=join=quorum(n=3): 1 ok, short
results:
  [0] ok=true text="answer B"
