crates/nerve-workstation/src/flow/tests/snapshots/nerve__flow__tests__golden_single.snap
---
source: crates/nerve-workstation/src/flow/tests.rs
expression: render_outcome(&outcome)
---
ok=true
summary=single: node ok=true (17 chars)
results:
  [0] ok=true text="the single answer"
